# rtc-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO
include/: DummyLib.h  RTCCanvas.h  RTCColor.h  RTCCommon.h  RTCLight.h  RTCMaterial.h  RTCMatrix.h  RTCRay.h  RTCShape.h  RTCTick.h  RTCTransformations.h  RTCTuple.h  RTCWorld.h
lib/: DummyLib.cpp  RTCCanvas.cpp  RTCColor.cpp  RTCCommon.cpp  RTCLight.cpp  RTCMaterial.cpp  RTCMatrix.cpp  RTCRay.cpp  RTCShape.cpp  RTCTick.cpp  RTCTransformations.cpp  RTCTuple.cpp  RTCWorld.cpp
src/: RTC.cpp  rtc.cpp
tests/: DummyTest.cpp  RTCCanvas_test.cpp  RTCColor_test.cpp  RTCLight_test.cpp  RTCMaterial_test.cpp  RTCMatrix_test.cpp  RTCRay_test.cpp  RTCSphere_test.cpp  RTCTransformations.cpp  RTCTransformations_test.cpp  RTCTuple_test.cpp  RTCWorld_test.cpp
